# multi-agent-pr-reviewer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: review.yml
examples/: buggy_login.py
reviewer/: __init__.py  __main__.py  agents.py  github_client.py  judge.py  orchestrator.py
