[project]
name = "multi-agent-pr-reviewer"
version = "0.1.0"
description = "Multi-agent GitHub PR code reviewer powered by Claude"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
reviewer = "reviewer.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reviewer*"]
